---
source: src/parser/mod.rs
assertion_line: 72
expression: "format_pair(pair.unwrap(), 0, true)"
---
- program
  - statement > assignment_statement
    - variable: "a"
    - colon: ":"
    - expression > binary_expression
      - unary_expression > expression > binary_expression
        - unary_expression > simple_expression > literal > number: "2"
        - operator: "+"
        - expression > unary_expression > simple_expression > literal > number: "5"
      - operator: "×"
      - expression > unary_expression > simple_expression > literal > number: "3"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "show"
    - expression > unary_expression > simple_expression > variable: "a"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "new"
    - single_name_part: "line"
  - EOI: ""
